--- a/css/snake.css
+++ b/css/snake.css
@@ -13,12 +13,14 @@
 
 .info .current-score {
   position: absolute;
+  z-index: -1;
   bottom: 32px;
   left: 34px
 }
 
 .info .high-score {
   position: absolute;
+  z-index: -1;
   bottom: 32px;
   right: 36px;
 }
@@ -64,7 +66,8 @@
   float: left;
   width: 16px;
   height: 16px;
-  transition: 300ms;
+  transition: border 300ms;
+  background-color: transparent;
 }
 
 .stopper.left {
