--- a/css/snake.css
+++ b/css/snake.css
@@ -3,9 +3,25 @@ html * {
   font: inherit;
 }
 
+#start-button {
+  width: 190px;
+  height: 100px;
+  margin: 0 auto;
+  border: 1px solid #ff00ff;
+  color: #ff00ff;
+  position: relative;
+  top: -350px;
+  background-color: transparent;
+  display: block;
+  cursor: pointer;
+  font-size: 20px;
+  z-index: 1;
+}
+
 .info {
   color: #2B2B2B;
   font-weight: lighter;
+  display: none;
 }
 
 .info ul {
