--- a/css/snake.css
+++ b/css/snake.css
@@ -16,10 +16,16 @@ html * {
   cursor: pointer;
   font-size: 20px;
   z-index: 1;
+  transition: border .1s;
 }
 
 #start-button:focus {
   outline: 0;
+}
+
+#start-button:hover {
+  border: 3px solid #ff00ff;
+  transition: border .1s;
 }
 
 .info {
